salesforce-port/force-app/main/default/objects/Payment__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>ACH</fullName><default>true</default><label>ACH Transfer</label></value>
            <value><fullName>Check</fullName><default>false</default><label>Check</label></value>
            <value><fullName>Wire</fullName><default>false</default><label>Wire Transfer</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>