salesforce-port/force-app/main/default/objects/Payment__c/fields/Wallet__c.field-meta.xml
<CustomField>
    <fullName>Wallet__c</fullName>
    <label>Wallet</label>
    <type>Lookup</type>
    <referenceTo>Wallet__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
</CustomField>